--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
-    "aframe": "^1.7.1",
     "aframe-particle-system-component": "^1.1.3",
     "d3": "^7.9.0",
+    "konva": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-force-graph-2d": "^1.29.1",
-    "react-router-dom": "^6.21.1",
-    "three": "^0.182.0"
+    "react-konva": "^19.2.2",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
